# GreenMesh

./: .prettierignore  .prettierrc.json  CONFIGURATION.md  config.json  main.py  pyproject.toml
client/: dev.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/.next-user/dev/: prerender-manifest.json  routes-manifest.json  trace
client/.next-user/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
client/.next-user/dev/cache/turbopack/v16.2.11/: 00000001.sst  00000004.sst  00000013.sst  00000014.sst  00000015.sst  00000020.sst  00000023.sst  00000034.sst  00000036.sst  00000040.sst  00000046.sst  00000048.sst  00000049.sst  00000055.sst  00000056.sst  00000057.sst  00000063.sst  00000068.sst  00000086.sst  00000092.sst  00000102.sst  00000104.sst  00000110.sst  00000116.sst  00000117.sst  00000122.sst  00000124.sst  00000129.sst  00000142.sst  00000154.sst  00000159.sst  00000165.sst  00000172.sst  (+19 more)
client/.next-user/dev/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
client/.next-user/dev/server/app/: page.js  page_client-reference-manifest.js
client/.next-user/dev/static/chunks/: [root-of-the-server]__1bird-9._.css  [root-of-the-server]__1bird-9._.css.map  _0edew_e._.js  _0edew_e._.js.map  _0o4y-z0._.js  _0o4y-z0._.js.map  node_modules_@swc_helpers_cjs_1r9vbqw._.js.map  node_modules_next_1i591lv._.js  node_modules_next_1i591lv._.js.map  node_modules_next_dist_1e9_p6y._.js.map  node_modules_next_dist_1ybzpk2._.js.map  node_modules_next_dist_client_0r5nbpw._.js.map  node_modules_next_dist_compiled_1amofcm._.js.map  node_modules_next_dist_compiled_next-devtools_index_090k2jm.js  node_modules_next_dist_compiled_react-dom_096_9a-._.js.map  node_modules_next_dist_compiled_react-server-dom-turbopack_164kp-6._.js.map  node_modules_next_dist_compiled_react_0qox21c._.js.map  src_05xcu40._.js  src_05xcu40._.js.map  src_1p33b26._.js  src_1p33b26._.js.map  src_app_chat_page_0hj1z63.js  src_app_globals_css_1igg3k2._.single.css  src_app_globals_css_1igg3k2._.single.css.map  src_app_page_0hj1z63.js
client/.next-user/dev/static/development/: _buildManifest.js
client/src/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
client/src/app/chat/: page.js  page.tsx
client/src/components/: ChatInterface.jsx  ChatInterface.tsx  ClustersList.tsx  FederationPanel.tsx  MetricsCards.jsx  MetricsCards.tsx  ModelsList.jsx  ModelsList.tsx  RunnersList.jsx  RunnersList.tsx
client/src/types/: index.ts
server/: __init__.py  api.py  cluster.py  config.json  config.py  federation.py  gpu_metrics.py  main.py  runner.py  throughput_metrics.py
(+30 files in other folders)
