[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexllama"
version = "0.2.0"
description = "A lightweight Python tool that easily runs multiple llama.cpp server instances with OpenAI v1 API compatibility"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Wojciech Czaplejewicz", email = "czaplejewicz@gmail.com"}
]
keywords = [
    "flexllama",
    "llama",
    "llama.cpp",
    "openai",
    "runner",
    "api",
    "llm",
    "language-model",
    "multi-gpu",
    "embedding",
    "reranking",
    "inference",
    "server"
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4,<5",
]

[project.urls]
Homepage = "https://github.com/yazon/flexllama"

[project.scripts]
flexllama = "main:main_entry"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*", "frontend*"]
exclude = ["tests*", "logs*", "__pycache__*"]

[tool.setuptools.package-data]
frontend = ["*"]
"*" = ["config_example.json"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".venv",
    "venv_uv",
    "logs",
    "tests/logs",
    "dist",
    "build",
    "frontend/vendor",
]
