[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenmesh"
version = "1.0"
description = "Multi-GPU inference management for Large Language Models"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = []
keywords = [
    "greenmesh",
    "llama",
    "llama.cpp",
    "openai",
    "runner",
    "api",
    "llm",
    "language-model",
    "multi-gpu",
    "embedding",
    "reranking",
    "inference",
    "server"
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4,<5",
]

[project.urls]
Homepage = "https://github.com/realSalman/greenmesh"

[project.scripts]
greenmesh = "server.main:main_entry"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*", "frontend*"]
exclude = ["tests*", "logs*", "__pycache__*"]

[tool.setuptools.package-data]
frontend = ["*"]
"*" = ["config_example.json"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".venv",
    "venv_uv",
    "logs",
    "tests/logs",
    "dist",
    "build",
    "frontend/vendor",
]
